<resources>
<string name="app_name">VoiceGame</string>
<string name="btSpeak">Speak</string>
<string name="btStartGame">Start New Game</string>
<string name="btLoadGame">Load Game</string>
<string name="btExitGame">Exit</string>
<string name="menu_settings">Settings</string>
<string name="title_activity_voice_recognition">Voice Recognition</string>
<string name="etSearchHint">Speech hint here</string>
<string-array name="saNoOfMatches">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
</string-array>
</resources>